--- a/package.json
+++ b/package.json
@@ -1,55 +1,47 @@
 {
   "private": true,
-  "license": "MIT",
   "scripts": {
-    "build": "next build",
-    "postbuild": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/generate-rss.mjs && node ./scripts/generate-sitemap.mjs",
     "dev": "next dev",
+    "build": "npm run setup && next build",
+    "build-only": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "setup": "node ./lib/setup.mjs"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0",
-    "@tailwindcss/typography": "0.5.9",
-    "classnames": "^2.3.2",
-    "contentlayer": "^0.3.1",
-    "date-fns": "2.29.3",
-    "googleapis": "114.0.0",
-    "motion": "^10.15.5",
-    "next": "^13.3.0",
-    "next-auth": "4.22.0",
-    "next-contentlayer": "^0.3.1",
-    "next-themes": "^0.2.1",
-    "preact": "^10.13.2",
+    "@octokit/rest": "^19.0.7",
+    "@planetscale/database": "^1.5.0",
+    "@vercel/analytics": "^0.1.11",
+    "@vercel/edge-config": "^0.1.1",
+    "@vercel/og": "^0.0.27",
+    "clsx": "^1.2.1",
+    "contentlayer": "^0.3.0",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "framer-motion": "^8.5.4",
+    "kysely": "^0.23.4",
+    "kysely-planetscale": "^1.2.1",
+    "next": "13.2.5-canary.16",
+    "next-auth": "^4.19.0",
+    "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "2.1.2",
-    "tailwindcss": "3.3.1",
-    "use-delayed-render": "^0.0.7"
+    "react-wrap-balancer": "^0.4.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.2",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "server-only": "^0.0.1",
+    "shiki": "^0.13.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.33",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "^13.3.0",
-    "globby": "13.1.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "prettier": "2.8.7",
-    "prisma": "4.12.0",
-    "reading-time": "^1.4.0",
-    "rehype": "12.0.1",
-    "rehype-autolink-headings": "6.1.1",
-    "rehype-code-titles": "1.2.0",
-    "rehype-prism-plus": "^1.5.1",
-    "rehype-slug": "5.1.0",
-    "remark-gfm": "^3.0.1",
-    "rss": "1.2.2",
-    "typescript": "^5.0.4"
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "none"
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
